--- a/WpfLibrary3/WpfLibrary3.csproj
+++ b/WpfLibrary3/WpfLibrary3.csproj
@@ -2,14 +2,16 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>netcoreapp3.1;net5.0-windows;net6.0-windows</TargetFrameworks>
+		<Nullable>enable</Nullable>
 		<UseWPF>true</UseWPF>
-        <LangVersion>9.0</LangVersion>
+		<LangVersion>9.0</LangVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0-preview4" />
-		<PackageReference Include="nunit" Version="3.13.3" />
-		<PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\WpfLibrary1\WpfLibrary1.csproj" />
 	</ItemGroup>
 </Project>
