--- a/WpfApp3/WpfApp3.csproj
+++ b/WpfApp3/WpfApp3.csproj
@@ -12,4 +12,11 @@
 		<PackageReference Include="ControlzEx" version="6.0.0-alpha0241" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Page Update="Shell.xaml">
+	    <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+	    <SubType>Designer</SubType>
+	  </Page>
+	</ItemGroup>
+
 </Project>
